--- a/src/app/previous/previous.component.html
+++ b/src/app/previous/previous.component.html
@@ -1,1 +1,3 @@
-<button id="prev" (click)="prev()" *ngIf="data.value>0"><i class="fa fa-chevron-left prev"></i></button>
+<button id="prev" (click)="prev()" *ngIf="data.value>0">
+	<i class="fa fa-chevron-left prev" [ngStyle]="{'color': ui?.buttons?.color}"></i>
+</button>
