--- a/src/styles.scss
+++ b/src/styles.scss
@@ -173,7 +173,7 @@ p, span, ul li{
 	font-weight: bold;
 	font-size: 3.1em !important;
 	margin-top: 40px !important;
-	color: $blue !important;
+	// color: $blue !important;
 	text-align: left !important;
 	margin-bottom: 40px;
 }
