Added the colors for text tasks

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -54,12 +54,12 @@
                     <app-instructions *ngIf="data.value==0" [data]="data" [instructions]="instructions" [ui]="ui"></app-instructions>
                     <!-- assignment Info title -->
                     <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12" *ngIf="data.value>0 && data.value < amount-1">
-                        <h2 class="titles pull-left"><i class="fa fa-file-text-o"></i> Assignment Information</h2>
-                        <h2 class="titles pull-right"><i class="fa fa-calendar"></i> Date &amp; Percentage</h2>
+                        <h2 class="titles pull-left" [ngStyle]="{'color': ui?.subheadings?.color}"><i class="fa fa-file-text-o"></i> Assignment Information</h2>
+                        <h2 class="titles pull-right" [ngStyle]="{'color': ui?.subheadings?.color}"><i class="fa fa-calendar"></i> Date &amp; Percentage</h2>
                     </div>
                     <!-- assignment information -->
                     <div class="col-md-9 col-sm-8 col-xs-8 col-lg-9" *ngIf="data.value>0 && data.value < amount-1">
-                        <app-information *ngIf="data.value>0 && data.value < amount-1" [data]="data" [assignments]="assignments" [amount]="amount" [value]="value"></app-information>
+                        <app-information *ngIf="data.value>0 && data.value < amount-1" [data]="data" [assignments]="assignments" [amount]="amount" [value]="value" [ui]="ui"></app-information>
                     </div>
 
                     <!-- due date image -->
@@ -69,7 +69,7 @@
 
                     <!-- Progress bar -->
                     <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12" *ngIf="data.value>0 && data.value < amount-1">
-                    	<h2 class="titles"><i class="fa fa-pie-chart"></i> Assignment Progress</h2>
+                    	<h2 class="titles" [ngStyle]="{'color': ui?.subheadings?.color}"><i class="fa fa-pie-chart"></i> Assignment Progress</h2>
                     	<p><app-progress [data]="data" [value]="value" [amount]="amount" [assignments]="assignments" [ui]="ui" [total]="getTotal()"></app-progress></p>
                     </div>
 
@@ -85,14 +85,14 @@
                     </div>
                     <!-- one task -->
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                        <app-one-task [data]="data" *ngIf="data.value>0" [assignments]="assignments"></app-one-task>
+                        <app-one-task [data]="data" *ngIf="data.value>0" [assignments]="assignments" [ui]="ui"></app-one-task>
                     </div>
 
                     <!-- Multi tasks -->
                     <app-multi-tasks [data]="data" [ui]="ui" *ngIf="data.value>0" [assignments]="assignments"></app-multi-tasks>
 
                     <!-- custom tasks -->
-                    <app-custom *ngIf="data.value>0" [data]="data" [assignments]="assignments" [amount]="amount"></app-custom>
+                    <app-custom *ngIf="data.value>0" [data]="data" [assignments]="assignments" [amount]="amount" [ui]="ui"></app-custom>
 
                     <!-- print area -->
                     <div class="printArea" *ngIf="data.print==true">
