--- a/src/styles.scss
+++ b/src/styles.scss
@@ -214,7 +214,7 @@ p, span, ul li{
 .titles{
 	font-family: subHeadings, sans-serif;
 	font-weight: bold;
-	color: $darkBlue;
+	//color: $darkBlue;
 }
 
 .btn-primary{
