--- a/src/app/heading/heading.component.html
+++ b/src/app/heading/heading.component.html
@@ -5,9 +5,9 @@
 
       <div class="symbol pull-left hidden-xs" *ngIf="i==data.value" [ngStyle]="{'background-color': ui?.colors?.third, 'color': ui?.symbol?.color}">{{ headingOutput(i, d.value.symbol) }}</div>
 
-      <h1 class="sub pull-left padding-left hidden-xs" *ngIf="i!=1 && i==data.value" [ngStyle]="{'color': ui?.subheadings?.color}">{{  d.value.title }}</h1>
+      <h1 class="sub pull-left padding-left hidden-xs" *ngIf="i!=1 && i==data.value" [ngStyle]="{'color': ui?.colors?.fourth}">{{  d.value.title }}</h1>
       <!--show if short text -->
-      <h1 class="subForLarge pull-left padding-left hidden-xs" *ngIf="i==1 && i==data.value" [ngStyle]="{'color': ui?.subheadings?.color}">{{ d.value.title }}</h1>
+      <h1 class="subForLarge pull-left padding-left hidden-xs" *ngIf="i==1 && i==data.value" [ngStyle]="{'color': ui?.colors?.fourth}">{{ d.value.title }}</h1>
       <!--show if long text -->
       <!-- mobile text -->
       <div class="symbol col-xs-3 visible-xs" *ngIf="i==data.value" [ngStyle]="{'background': ui?.colors?.third, 'color': ui?.text?.color}">{{ headingOutput(i, d.value.symbol) }}</div>
