--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -97,16 +97,16 @@
                     <!-- print area -->
                     <div class="printArea" *ngIf="data.print==true">
                         <div class="col-md-9 col-lg-9 col-sm-9 col-xs-9">
-                            <h2 class="titles">Review Information</h2></div>
+                            <h2 class="titles" [ngStyle]="{'color': ui?.subheadings?.color}">Review Information</h2></div>
                         <div class="col-md-3 col-lg-3 col-sm-3 col-xs-3">
-                            <app-download [data]="data" [assignments]="assignments" [amount]="amount" [alert]="alert"></app-download>
+                            <app-download [data]="data" [assignments]="assignments" [amount]="amount" [alert]="alert" [ui]="ui"></app-download>
                         </div>
-                        <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
+                        <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12" [ngStyle]="{'color': ui?.text?.color}">
                             <p> {{ data.review_instructions }} </p>
                         </div>
                         <hr/>
                         <ul class="print col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                            <app-print [data]="data" [assignments]="assignments" [amount]="amount"></app-print>
+                            <app-print [data]="data" [assignments]="assignments" [amount]="amount" [ui]="ui"></app-print>
                         </ul>
                     </div>
                 </div>
