--- a/src/styles.scss
+++ b/src/styles.scss
@@ -418,8 +418,9 @@ ul li{
 }
 
 .printTitle{
-	color: $blue;
+	// color: $blue;
 	font-family: subHeadings, sans-serif;
+	font-size: 1.7em;
 }
 
 .errorMessageArea{
