--- a/src/app/print/print.component.html
+++ b/src/app/print/print.component.html
@@ -1,13 +1,13 @@
 <!-- the printed area -->
 
 <li *ngFor="let d of assignments | keys; let i = index">
-      <h2 class="printTitle col-md-12 col-lg-12 col-sm-12 col-xs-12" *ngIf="i>0 && i<amount-1"><button class="smallcircle" (click)="goTo(i)">{{ i }}</button>  {{ d.value.title }}</h2>
+      <h2 class="printTitle col-md-12 col-lg-12 col-sm-12 col-xs-12" *ngIf="i>0 && i<amount-1" [ngStyle]="{'color': ui?.colors?.fourth}"><button class="smallcircle" (click)="goTo(i)" [ngStyle]="{'background': ui?.buttons?.color, 'border-color': ui?.buttons?.color, 'border-style': 'solid'}">{{ i }}</button>  {{ d.value.title }}</h2>
 
 <!-- one choice -->
       <div class="one col-md-12 col-lg-12 col-sm-12 col-xs-12" *ngIf="d.value.type=='one'">
         <!--<img [src]="imageSrc(d.value.due_date)" class="img-responsive imageSize col-md-3 col-lg-3 col-sm-12 col-xs-12" />-->
         <app-custom-date [value]="i" [amount]="amount" [assignments]="assignments" class="col-md-3 col-lg-3 hidden-sm hidden-xs"></app-custom-date>
-        <p class="text col-md-9 col-lg-9 col-sm-12 col-xs-12"><b>{{ d.value.taskA.name }}</b>: {{ d.value.taskA.information }}</p>
+        <p class="text col-md-9 col-lg-9 col-sm-12 col-xs-12" [ngStyle]="{'color': ui?.text?.color}"><b>{{ d.value.taskA.name }}</b>: {{ d.value.taskA.information }}</p>
       </div>
 
     <!-- multiple choices -->
@@ -15,7 +15,7 @@
        <!-- <img [src]="imageSrc(d.value.due_date)" class="img-responsive imageSize col-md-3 col-lg-3 col-sm-12 col-xs-12" /> -->
        <app-custom-date [value]="i" [amount]="amount" [assignments]="assignments" class="col-md-3 col-lg-3 hidden-sm hidden-xs"></app-custom-date>
         <div *ngFor="let t of d.value.tasks | keys">
-        <p class="text col-md-9 col-lg-9 col-sm-12 col-xs-12" *ngIf="t.value.select==true"><b>{{ t.value.name }}</b>: {{ t.value.information }}</p>
+        <p class="text col-md-9 col-lg-9 col-sm-12 col-xs-12" *ngIf="t.value.select==true" [ngStyle]="{'color': ui?.text?.color}"><b>{{ t.value.name }}</b>: {{ t.value.information }}</p>
         </div>
       <!--  <p class="text" *ngIf="d.value.taskA.selectA==false && d.value.taskB.selectB==false">Please select an assignment.</p>-->
       </div>
@@ -23,7 +23,7 @@
       <div class="custom col-md-12 col-lg-12 col-sm-12 col-xs-12" *ngIf="d.value.type=='custom'">
         <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
           <app-custom-date [value]="i" [amount]="amount" [assignments]="assignments" class="col-md-3 col-lg-3 hidden-sm hidden-xs"></app-custom-date>
-          <p class="text col-md-9 col-lg-9 col-sm-12 col-xs-12" *ngFor="let t of d.value.tasks | keys"><b>{{ t.value.name }}</b>: {{ t.value.information }}</p>
+          <p class="text col-md-9 col-lg-9 col-sm-12 col-xs-12" *ngFor="let t of d.value.tasks | keys" [ngStyle]="{'color': ui?.text?.color}"><b>{{ t.value.name }}</b>: {{ t.value.information }}</p>
         </div>
       </div>
     </li>
