--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,6 +19,10 @@ body{
 	margin: 0;
 }
 
+input{
+	background: none;
+}
+
 //fonts defaults
 @font-face{
 	src: url(./assets/fonts/AlfaSlabOne-Regular.ttf);
