--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,9 +15,9 @@
 <!-- main app component -->
 <div class="container">
     <div class="row">
-    <!-- testing the post request 
+    <!-- testing the post request -->
     <button class="btn btn-primary btn-lg" (click)="postData()">Post Title</button>
-    <h1> Output: {{ postRequest }}</h1>-->
+    <h1> Output: {{ postRequest }}</h1>
         <!-- top menu -->
 
         <div class="container">
